--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>my first ever website</h1>
-    <h3>hello</h3>
+  <h5> i am ghost</h5>
 </body>
 </html>
