--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h5> i am ghost</h5>
+  <h3> i am ghost</h3>
+  <input type="text">
+  <button>push me!</button>
 </body>
 </html>
